--- a/org.polymap.model2.store.recordstore/.classpath
+++ b/org.polymap.model2.store.recordstore/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="lib/lucene-core-3.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/lucene-core-3.6.2.jar" sourcepath="lib/sources/lucene-core-3.6.2-sources.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/lucene-queryparser-3.6.2.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
