Remove minor warnings

--- a/org.polymap.model2/build.properties
+++ b/org.polymap.model2/build.properties
@@ -1,5 +1,6 @@
-source.. = src/
-output.. = build/eclipse/
+source.. = src/,\
+           src-test/
+output.. = build/eclipse
 bin.includes = META-INF/,\
                .,\
                lib/commons-io-2.4.jar,\
